--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,10 @@ h7 {
   letter-spacing: 4px;
   font-family: 'Poppins', sans-serif;
   text-transform: lowercase;
+  text-shadow: 1px 1px 1px #B33077,
+               2px 2px 1px #B33077;
+  border-bottom: 6px solid  rgba(179, 48, 119, 0.4);
+  padding-bottom: 6px;
 }
 
 /*--------------------------------------------------------------
@@ -579,73 +583,6 @@ section .container {
   border: 2px solid #B33077;
 }
 
-/*--------------------------------------------------------------
-# Services
---------------------------------------------------------------*/
-.services .icon-box {
-  text-align: center;
-  background: rgba(204, 204, 204, 0.1);
-  padding: 80px 20px;
-  transition: all ease-in-out 0.3s;
-}
-.services .icon-box .icon {
-  margin: 0 auto;
-  width: 64px;
-  height: 64px;
-  background: #B33077;
-  border-radius: 5px;
-  transition: all 0.3s ease-out 0s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
-  transform-style: preserve-3d;
-}
-.services .icon-box .icon i {
-  color: #fff;
-  font-size: 28px;
-}
-.services .icon-box .icon::before {
-  position: absolute;
-  content: "";
-  left: -8px;
-  top: -8px;
-  height: 100%;
-  width: 100%;
-  background: rgba(255, 255, 255, 0.15);
-  border-radius: 5px;
-  transition: all 0.3s ease-out 0s;
-  transform: translateZ(-1px);
-}
-.services .icon-box h4 {
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 24px;
-}
-.services .icon-box h4 a {
-  color: #fff;
-}
-.services .icon-box p {
-  line-height: 24px;
-  font-size: 14px;
-  margin-bottom: 0;
-}
-.services .icon-box:hover {
-  background: #B33077;
-  border-color: #B33077;
-}
-.services .icon-box:hover .icon {
-  background: #fff;
-}
-.services .icon-box:hover .icon i {
-  color: #B33077;
-}
-.services .icon-box:hover .icon::before {
-  background: #B33077;
-}
-.services .icon-box:hover h4 a, .services .icon-box:hover p {
-  color: #fff;
-}
 
 /*--------------------------------------------------------------
 # Portfolio
@@ -869,6 +806,16 @@ section .container {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
+#beep {
+    height: 400px;
+    padding: 50px;
+    transform: rotate(-8deg);
+}
+
+#artboards {
+  float: right;
+}
+
 .contact .info-box {
   color: #444444;
   padding: 20px;
