--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -997,6 +997,26 @@ section .container {
     }
 }
 
+@media screen and (max-width: 992px)  { 
+    .ftricons {
+  align-content: center;
+  align-items: center;
+  text-align: center;
+    background: #000;
+        
+    }
+}
+
+@media screen and (min-width: 993px)  { 
+    .ftricons {
+  align-content: right;
+  align-items: right;
+  text-align: right;   }
+    #icons {
+        margin-right: 20px;
+        width: 420px;
+    }
+}
 
 .ftricons {
   position: fixed;
