--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -965,6 +965,14 @@ section .container {
     padding-top: 15px;
 }
 
+@media screen and (max-width: 992px)  { 
+  .ftricons {
+  align-content: center;
+  align-items: center;
+  text-align: center;
+  background: #000;   
+    }
+}
 
 @media screen and (min-width: 993px)  { 
   .ftricons {
