--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,6 +213,7 @@ h7 {
 }
 #header.header-top h1 {
   margin-right: auto;
+  margin-top: 30px;
   font-size: 36px;
 }
 #header.header-top .container {
